--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/ma
 script: bash -ex .travis-opam.sh
 sudo: required
 env:
-  - PACKAGE="mirage-oram" OCAML_VERSION=latest OPAM_VERSION=1.2.0
+  - PACKAGE="mirage-btrees" OCAML_VERSION=latest OPAM_VERSION=1.2.0
 notifications:
   email: false
